fix overlap with navigation on mobile browsers

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -63,3 +63,11 @@ label {
 .is-typing {
   animation: blink 1.5s infinite;
 }
+
+.message-input { 
+  border-top: 4px solid #000;
+  padding: 16px;
+  background-color: #fff;
+  padding-bottom: calc(env(safe-area-inset-bottom) + 20px); /* Add extra padding if needed */
+  box-sizing: border-box;
+}
